--- a/sass/style.scss
+++ b/sass/style.scss
@@ -321,3 +321,62 @@ button {
         }
     }
 }
+
+/* Pricing */
+
+.pricing {
+
+    .row {
+        display: flex;
+        margin-top: 60px;
+        
+        .box {
+            margin: auto 10px;
+            
+            .box-price {
+                margin-bottom: 1px;
+                background-color: white;
+                padding: 8px 20px;
+                border-top-right-radius: 2px;
+                border-top-left-radius: 2px;
+
+                .price {
+                    color: $color-green;
+                    text-align: left;
+                    margin-bottom: 0;
+                    margin-top: 16px;
+                }
+
+                .section-subtitle {
+                    text-align: left;
+                    margin-top: 0;
+                }
+            }
+
+            .box-text {
+                padding: 20px;
+                background-color: white;
+
+                p {
+                    text-align: left;
+                }
+            }
+
+            .btn-3 {
+                background-color: $color-green;
+                display: flex;
+                border-radius: 0;
+                border: none;
+                width: 100%;
+                border-bottom-right-radius: 2px;
+                border-bottom-left-radius: 2px;
+                justify-content: space-between;
+                padding-left: 20px;
+                padding-right: 20px;
+                font-size: 12px;
+                align-items: flex-end;
+            }
+        }
+    }
+    
+}
