--- a/sass/style.scss
+++ b/sass/style.scss
@@ -380,3 +380,32 @@ button {
     }
     
 }
+
+/* Map */
+.map {
+
+    .row {
+        display: flex;
+        display: row;
+
+        .map-image {
+            width: 50%;
+            height: 100%;
+            margin-left: 20px;
+            
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+
+        .box {
+            flex: 0 0 50%;
+            text-align: left;
+            p {
+                margin-bottom: 50px;
+            }
+        }
+    }
+}
